feat: add event types swagger api docs and update permissions
