# backend/internal/api/routes/event_routes.go
@@ -14,4 +14,22 @@ func (server *Server) initEventRoutes(mux *http.ServeMux, manager *middlewares.M
 			server.middleware.AuthenticateJWT,
 		),
 	)
+
+	mux.Handle(
+		"POST /api/v1/event-types",
+		manager.With(
+			http.HandlerFunc(server.handlers.CreateEventType),
+			server.middleware.Authorization(middlewares.EVENT_TYPE_CREATE_ACCESS),
+			server.middleware.AuthenticateJWT,
+		),
+	)
+
+	mux.Handle(
+		"GET /api/v1/event-types",
+		manager.With(
+			http.HandlerFunc(server.handlers.GetEventTypes),
+			server.middleware.Authorization(middlewares.EVENT_TYPE_VIEW_ACCESS),
+			server.middleware.AuthenticateJWT,
+		),
+	)
 }
